--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+      
+        <!-- ________ *TEMPLATE: Kenshi2727's card START ________  -->
+        <div class="card">
+          <p class="name">Abhishek Mathur</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/abhishek-mathur-29569a260/" target="_blank">My LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Kenshi2727" target="_blank">My Github Profile</a>
+          </p>
+          <p class="about">I am a passionate developer who loves to play🎮 with different technologies!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.framer.com/motion/" target="_blank" title="First Resource">Framer Motion🎞️</a>
+              </li>
+              <li>
+                <a href="https://www.minifier.org/" target="_blank" title="Second Resource">Minification Tool⚒️</a>
+              </li>
+              <li>
+                <a href="https://appbrewery.github.io/flexboxfroggy/" target="_blank" title="Third resource">
+                  Interactive Game for learning Flexbox
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Kenshi2727's card END ________  -->
+        
         <!-- ________ marshallhhhh Contributor card START ________  -->
         <div class="card">
           <p class="name">Marshall H</p>
