--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- _______________ Tanguy LH  START ________________  -->
+        <div class="card">
+          <p class="name">Tanguy LH</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/tanguy-le-henaff/" target="_blank">Tanguy LH</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/TanguyLH" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Backend Developer / Cloud engineer / DevOps / Getting started in Open Source :)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.reddit.com/r/learnprogramming/comments/140gdp8/a_stepbystep_for_doing_your_first_open_source/" 
+                    target="_blank" title="Getting started in open source">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=-ybCiHPWKNA" target="_blank" title="Neovim Setup">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=Bf7vDBBOBUA" target="_blank" title="Don't write Comments">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- __________________ Tanguy LH  END ____________________ -->
+
         <!-- ________ marshallhhhh Contributor card START ________  -->
         <div class="card">
           <p class="name">Marshall H</p>
