--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/MartianCactus" target="_blank">MartianCactus</a>
           </p>
-          <p class="about">guy learning stufff</p>
+          <p class="about">Hi! Im a data science guy learning some stufff about collaborative development! Dont know much about front end but here are some general learning resources!</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">idk 1</a>
+                <a href="https://www.khanacademy.org" target="_blank" title="First Resource">Khan Academy</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">idk 2</a>
+                <a href="https://www.fast.ai/" target="_blank" title="Second Resource">Fast AI: Deep Learning</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">idk 3</a>
+                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="Third resource">Harvard CS50x</a>
               </li>
             </ul>
           </div>
