Add CattusX card info

--- a/index.html
+++ b/index.html
@@ -2784,6 +2784,30 @@
         </div>
         <!-- ========= Gil Card END =========   -->
 
+        <!-- ========= CattusX Card START =========  -->
+        <div class="card">
+          <p class="name">CattusX</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/CattusX" target="_blank">CattusX</a>
+          </p>
+          <p class="about">Deeplearning Engineer | Level UP</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.bilibili.com" target="_blank" title="First Resource">More knowledge from here</a>
+              </li>
+              <li>
+                <a href="https://github.com/karpathy" target="_blank" title="Second Resource">Very powerful person</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com" target="_blank" title="Third Resource">Almost omnipotent</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= CattusX Card END =========  -->
         
         <!-- ========= END ========= -->
 
