Update index.html - add contributors card - aarifkhan7

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
  <!-- ================================================ -->
+        <!-- ________ aarifkhan7 card START ________  -->
+        <div class="card">
+          <p class="name">Aarif Khan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/aarifkhan_7" target="_blank">@aarifkhan_7</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/aarifkhan7" target="_blank">@aarifkhan7</a>
+          </p>
+          <p class="about">A software developer, eager to contribute to open-source projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/ossu/computer-science" target="_blank" title="First Resource">OSSU - Computer Science</a>
+              </li>
+              <li>
+                <a href="https://github.com/EbookFoundation/free-programming-books" target="_blank" title="Second Resource">Free Programming Books</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="Third resource">CS50's Youtube Channel</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ aarifkhan7 card END ________  -->
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
