--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
  <!-- ================================================ -->
+  
+          <!-- ________ Naman START ________  -->
+          <div class="card">
+            <p class="name">Naman Singh Rana</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://www.twitter.com/your_user_handle" target="_blank">       </a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/namansinghrana" target="_blank">namansinghrana</a>
+            </p>
+            <p class="about">Hello! My name is Naman and I am a Full stack developer holding proficiency in Java and C , Data Structures and Algorithms , Database , Computer Networks. My tech stack includes React , SpringBoot , MongoDB , MySQL , Postman.</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="#" target="_blank" title="First Resource">GeeksforGeeks</a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" title="Second Resource">Sheryians Coding School</a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" title="Third resource">Free Code Camp</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ Naman END ________  -->
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
