--- a/index.html
+++ b/index.html
@@ -2809,7 +2809,72 @@
         </div>
         </div>
         </div>
+                <!-- ========= Gil Card Start =========   -->
+        <div class="card">
+          <p class="name">Gil Gabunada</p>
+          <p class="contact">
+            <i class="fab fa-facebook"></i>
+            <a href="https://www.facebook.com/gil.gabunada/" target="_blank">Gil Gabunada</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/recyclebin12331" target="_blank">recyclebin12331</a>
+          </p>
+          <p class="about">Computer Engineering Student | Hardware Enthusiast | Music | Anime</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://developer.mozilla.org/en-US/"
+                  target="_blank"
+                  title="First Resource">MDN Web Docs (Mozilla Developer Network)
+                </a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Third resource">
+                  GitHub
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        </div>
+        </div>
         <!-- ========= Gil Card END =========   -->
+                <!-- ========= Chirag Card Start =========   -->
+                <div class="card">
+                  <p class="name">Chirag Chawla</p>
+                  <p class="contact">
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/surenoobster" target="_blank">surenoobster</a>
+                  </p>
+                  <p class="about">AI/ML enthusiast </p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a
+                          href="https://towardsdatascience.com/"
+                          target="_blank"
+                          title="First Resource">Data Science Resource
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+                      </li>
+                      <li>
+                        <a href="https://github.com/" target="_blank" title="Third resource">
+                          GitHub
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                </div>
+                </div>
+                <!-- ========= Chirag Card End =========   -->
 
         
         <!-- ========= END ========= -->
