--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://github.com/ossu/computer-science" target="_blank" title="First Resource">OSSU - Computer Science</a>
+                <a href="https://github.com/ossu/computer-science" target="_blank" title="OSSU - Computer Science">OSSU - Computer Science</a>
               </li>
               <li>
-                <a href="https://github.com/EbookFoundation/free-programming-books" target="_blank" title="Second Resource">Free Programming Books</a>
+                <a href="https://github.com/EbookFoundation/free-programming-books" target="_blank" title="Free Programming Books">Free Programming Books</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/@cs50" target="_blank" title="Third resource">CS50's Youtube Channel</a>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="CS50's Youtube Channel">CS50's Youtube Channel</a>
               </li>
             </ul>
           </div>
