Add my card information

--- a/index.html
+++ b/index.html
@@ -114,6 +114,36 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- Bruno Justino Contributor card START -->
+        <div class="card">
+          <p class="name">Bruno Justino</p>
+          <p class="contact">
+            <i class="fa-solid fa-house-user"></i>
+            <a href="https://portfolio.brunojustino.com/" target="_blank">Portfolio</a>
+            <i class="fa-solid fa-atom"></i>
+            <a href="https://www.codewars.com/users/brunojustino" target="_blank">Codewars</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/brunojustino" target="_blank">Bruno Justino</a>
+          </p>
+          <p class="about">Full-stack Developer from Brazil. Feel free to use my free diary that I built with NextJS, prisma and MySQL. <a href="https://diary.brunojustino.com" target="_blank">Diary</a> Don't worry, everything is encrypted.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank">RoadMap.sh</a>
+              </li>
+              <li>
+                <a href="https://goodfirstissues.com/" target="_blank">Good First Issues</a>
+              </li>
+              <li>
+                <a href="https://nodeschool.io/" target="_blank">NodeSchool</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Bruno Justino Contributor card END -->
+
  <!-- ================================================ -->
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
