Added my changes

--- a/index.html
+++ b/index.html
@@ -2744,6 +2744,42 @@
           </div>
         </div>
         <!-- ========= Card 12 END =========   -->
+          <!-- ========= Ayesha Card Start =========   -->
+        <div class="card">
+          <p class="name">Ayesha Tuba</p>
+          <p class="contact">
+            <i class="fa-brands fa-discord"></i>
+            <a href="https://www.discord.com/ayeshaq_03999" target="_blank">Ayesha</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/atuba426" target="_blank">atuba426</a>
+          </p>
+          <p class="about"> I'm currently a Bachelor of Computer Applications(BCA) student with a passion for programming & technology.
+            My coding journey began with C language. This is my First open-source contribution.  </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://www.apnacollege.in/"
+                  target="_blank"
+                  title="First Resource">Apna Collage youtube channel
+                </a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Third resource">
+                  GitHub
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        </div>
+        </div>
+        <!-- ========= Ayesha Card END =========   -->
+
         <div class="card">
           <p class="name">Meran Ahsan</p>
           <p class="contact">
