--- a/index.html
+++ b/index.html
@@ -114,7 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
- <!-- ================================================ -->
+        <!-- ================================================ -->
+        <!--_______________anthonysin START___________________-->
+        <div class="card">
+          <p class="name">Anthony Singh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">No Twitter Link, Sorry!</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/anthonysin" target="_blank">anthonysin</a>
+          </p>
+          <p class="about">Hello! My name is Anthony and I am beginner Front End Developer.I love video games and wathcing movies!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN Web Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!--_______________anthonysin END_____________________-->
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
