--- a/index.html
+++ b/index.html
@@ -928,6 +928,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Cyriac John</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/cyriac-john-5b7844216/" target="_blank">Cyriac John</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/cyriacjohn" target="_blank">cyriacjohn</a>
+          </p>
+          <p class="about">Developer blending AI, music and creative tech solutions</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/sindresorhus/awesome" target="_blank" title="First Resource">Github</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Second Resource">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="Third resource">Odin Project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+ <!-- ================================================ -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
