sanju shaw card added

--- a/index.html
+++ b/index.html
@@ -114,6 +114,34 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+          <!-- ________ Sanju Shaw Card start ________  -->
+          <div class="card">
+            <p class="name">Sanju Shaw</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://x.com/sanju_shaw49496" target="_blank">Sanju shaw</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/DeadpoolX7/" target="_blank">DeadpoolX7</a>
+            </p>
+            <p class="about">Hi, there I am Full Stack web developer a random boy who loves to play cricket and in free time enjoys reading books. I work with variety of tool and languages such as JavaScript, Java, React, Springboot etc. still exploring more in tech world!</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://codedamn.com/" target="_blank" title="First Resource">CodeDamn</a>
+                </li>
+                <li>
+                  <a href="https://www.javatpoint.com/" target="_blank" title="Second Resource">JavatPoint</a>
+                </li>
+                <li>
+                  <a href="https://docs.oracle.com/javase/8/docs/api/" target="_blank" title="Third resource">Oracle Java Docs</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ Card end________  -->
+
  <!-- ================================================ -->
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
