--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
  <!-- ================================================ -->
+
+  <!-- ________ Omar-samim contribution START ________  -->
+  <div class="card">
+    <p class="name">Omar samim</p>
+    <p class="contact">
+      <i class="fab fa-github"></i>
+      <a href="https://github.com/Omar-samim" target="_blank">Omar-samim</a>
+      <i class="fab fa-linkedin"></i>
+      <a href="https://www.linkedin.com/in/omarsamim/" target="_blank">Omar Samim</a>
+    </p>
+    <p class="about">Hey everyone How are doing. <br> My name is <b>Omar Samim</b> from Afghanistan. A student of Computer Inforation System at Shaykh Zahid University. <br> I am a self motivated student. I have learned anything from youtube if you want to be hero in coding you should follow the below channel that i leave you.  </p>
+    <div class="resources">
+      <p>3 Useful Youtube Channel</p>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/@ApnaCollegeOfficial" target="_blank" title="First Resource">Apna College</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/@CodeWithHarry" target="_blank" title="Second Resource">code With harry</a>
+        </li>
+        <li>
+          <a href="https://w3schools.com/" target="_blank" title="Third resource">W3schools</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- ________ Omar-Samim contribution card END ________  -->
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
