--- a/index.html
+++ b/index.html
@@ -114,7 +114,30 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
  <!-- ================================================ -->
+        <div class="card">
+          <p class="name">Tedd</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/CoderGuyTedd" target="_blank">TeddTheCoder. Or</a>
+          </p>
+          <p class="about">Im a coder and a game dev. Godot is pronounced Guh-doe. Not Go-Dot!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources, yay</p>
+            <ul>
+              <li>
+                <a href="https://forum.godotengine.org/" target="_blank" title="First resource">Godot forum</a>
+              </li>
+              <li>
+                <a href="github.com" target="_blank" title="Second resource">Github</a>
+              </li>
+              <li>
+                <a href="chat.openai.com" target="_blank" title="Third resource">Chatgpt</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
