--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
@@ -12,7 +15,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>Contribute To This Project</title>
+    <title>Contribute To This Project!</title>
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
   <body>
@@ -42,7 +45,7 @@
             <h2>A project for first-time contributions</h2>
             <p>
               This is a tutorial to help first-time contributors participate in a simple and easy project. Get more
-              comfortable using GitHub and make your first open source contribution. It's quick and easy.
+              comfortable using GitHub and make your first open source contribution. It's quick, and easy.
             </p>
             <a
               class="button"
