Add DotWriteLine card info

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Contribute To This Project</title>
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
-  <body>
+    <body>
     <div class="container">
       <div class="row">
         <div class="column">
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *DotWriteLine* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Jairo R.</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/ConsoleDotWrite" target="_blank">ConsoleDotWrite</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/DotWriteLine" target="_blank">DotWriteLIne</a>
+          </p>
+          <p class="about">Apasionado con grandes ambiciones</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://dontasktoask.com/?fbclid=IwAR1XGaarnoul_jsSyFm6qZWQfkh80PxJSuQhDDZymoXME3btEokDJBpqjiA" target="_blank" title="First Resource">Don't ask to ask, just ask</a>
+              </li>
+              <li>
+                <a href="#" target="https://roadmap.sh/python" title="Second Resource">Python roadmap</a>
+              </li>
+              <li>
+                <a href="https://fullstackhero.net/" target="_blank" title="Third resource">A well-documented template of a developed web application</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *DotWriteLine* Contributor card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
