--- a/index.html
+++ b/index.html
@@ -2833,13 +2833,48 @@
             </ul>
           </div>
         </div>
-        </div>
-        </div>
         <!-- ========= Gil Card END =========   -->
-
-        
+        <!-- Muhthar's Card Starts Here-->
+        <div class="card">
+          <p class="name">Ibnu Muhthar</p>
+          <p class="contact">
+            <i class="fas fa-globe"></i>
+            <a href="https://ibnumuhthar.netlify.app" target="_blank">Portfolio</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ib-inu" target="_blank">ib-inu</a>
+          </p>
+          <p class="about">NextJS & Django Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://developer.mozilla.org/"
+                  target="_blank"
+                  title="First Resource">
+                MDN Web Docs
+                </a>
+              </li>
+              <li>
+                <a 
+                href="https://css-tricks.com/" 
+                target="_blank"
+                 title="Second Resource">
+                 CSS-Tricks
+                </a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">
+                  FreeCodeCamp
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Muhthar's Card ends Here-->
+        </div>
+        </div>
         <!-- ========= END ========= -->
-
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
       </div>
