Add Jojoyxc card

--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+				<!-- ________ JoJoyxc START ________  -->
+				<div class="card">
+					<p class="name">JoJoyxc</p>
+					<p class="contact">
+						<i class="fab fa-github"></i>
+						<a href="https://www.github.com/JoJoyxc" target="_blank">JoJoyxc</a>
+					</p>
+					<p class="about">Hello! My name is JoJoyxc.</p>
+					<div class="resources">
+						<p>3 Useful Dev Resources</p>
+						<ul>
+							<li>
+								<a href="https://vtj.pro/" target="_blank" title="First Resource">VTJ Lower Code</a>
+							</li>
+							<li>
+								<a href="https://gitee.com/newgateway" target="_blank" title="Second Resource">Camp</a>
+							</li>
+							<li>
+								<a href="https://gitee.com/newgateway/vtj" target="_blank" title="Third resource">lower Code</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<!-- ________ JoJoyxc END ________  -->
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
