--- a/index.html
+++ b/index.html
@@ -141,6 +141,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!--         Kishore Start-->
+         <div class="card">
+          <p class="name">Kishore M</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/kishore0_0_7/" target="_blank">Kishore0-0-7</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Kishore0-0-7" target="_blank">Kishore0-0-7</a>
+          </p>
+          <p class="about">Software Developer, Python Developer, Beginner Programmer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@takeUforward" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://pythontutor.com/render.html#mode=edit" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://wiki.python.org/moin/BeginnersGuide" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- end of the card-->
 
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
