--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-         <!--         Kishore Start-->
+         <!------------Kishore Start----------->
          <div class="card">
           <p class="name">Kishore M</p>
           <p class="contact">
