--- a/index.html
+++ b/index.html
@@ -142,6 +142,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                      <!-- Chard's Start -->
+        
+           <div class="card">
+          <p class="name">Chard Peter</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/ChardPeter1" target="_blank">@ChardPeter1</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ChardPeterz" target="_blank">ChardPeterz</a>
+          </p>
+          <p class="about">Armed with a solid foundation in Information Technology from Micoud Secondary School, my career as a Full Stack Developer at my previous job was truly a journey of continuous growth and leadership. My portfolio on GitHub stands as a testament to my proficiency in the MERN stack and my ability to optimize applications for peak performance.
+
+Leading a team of Junior Developers, we have pioneered dynamic web applications, including a weather application that I personally deployed. My certifications in JavaScript and Web Development underscore my dedication to mastering the nuances of coding and my commitment to delivering robust web solutions.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+                        <!-- Chard's End -->
+        
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
