--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Hassan Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Mohammed Hassan :D</p>
+          <p class="contact">
+            <i class="fa-brands fa-google"></i>
+            <a href="https://www.google.com" target="_blank">Don't use Twitter :P</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Hassan-2k03" target="_blank">Hassan2k03</a>
+          </p>
+          <p class="about">
+            Well I'm a student who is passionate about programming and learning new things. I'm currently learning web, 
+            app development and machine learning. 
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com/" target="_blank" title="Second Resource">Kaggle</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">geeksforgeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Hassan Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
