bernard ofoegbu contribution

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ Bernard Ofoegbu Card contribution START ________  -->
+         <div class="card">
+          <p class="name">Bernard Ofoegbu</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/ObinnaBernard" target="_blank">@ObinnaBernard</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/O-BERNARDOFOEGBU" target="_blank">O-BERNARDOFOEGBU</a>
+          </p>
+          <p class="about">Frontend Engineer with a passion for crafting user-friendly and scalable web experiences. Known for combining creativity with code, and proud to be a LinkedIn Top Voice in Web Development. 🚀 #TechEnthusiast #WebDev</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="First Resource">MDN Web Docs -  is an essential reference for HTML, CSS, and JavaScript</a>
+              </li>
+              <li>
+                <a href="https://www.frontendmentor.io/" target="_blank" title="Second Resource"> Frontend Mentor is a platform offering real-world design challenges </a>
+              </li>
+              <li>
+                <a href="https://javascript.info/" target="_blank" title="Third resource">JavaScript.info is a deep, interactive JavaScript guide with in-depth tutorials and explanations of core JS concepts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Bernard Ofoegbu Card contribution END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
@@ -141,6 +168,8 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+       
 
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
