--- a/index.html
+++ b/index.html
@@ -2837,6 +2837,32 @@
         </div>
         <!-- ========= Gil Card END =========   -->
 
+         <!-- ========= Marwa Card Start =========   -->
+        <div class="card">
+          <p class="name">Marwa Sayed</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Marwa-Sayed12" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Hello, I'm full-stack web developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Courses<p>
+            <ul>
+              <li>
+                <a href="https://www.coursera.org/" target="_blank" title="First Resource">Coursera</a>
+              </li>
+              <li>
+                <a href="https://alison.com/" target="_blank" title="Second Resource">Alison</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Third resource">Udemy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Marwa card END ________  -->
         
         <!-- ========= END ========= -->
 
