--- a/index.html
+++ b/index.html
@@ -2367,6 +2367,28 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+		
+        <!-- NinhLaiLapTrinh Contributor card START -->
+        <div class="card">
+          <p class="name">Duong Van Ninh</p>
+          <p class="contact">
+            <i class="fab fa-x-facebook"></i>
+            <a href="https://www.facebook.com/ninhduongcoder" target="_blank">ninhduongcoder</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ninhlailaptrinh" target="_blank">NinhLaiLapTrinh</a>
+          </p>
+          <p class="about">👋 Hi! My name is Ninh Lai Lap Trinh 🎓 I'm an Information Technology Student 
+		  💻 I'm passionate about system programming and Linux</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li><a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a></li>
+              <li><a href="https://www.sololearn.com/en/" target="_blank">Sololearn</a></li>
+              <li><a href="https://chatgpt.com/" target="_blank">ChatGPT</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- NinhLaiLapTrinh Contributor card END -->
 
         <!-- ========= START ========= -->
 
