--- a/index.html
+++ b/index.html
@@ -117,6 +117,31 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Ryan C</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/W1ntrr" target="_blank">W1ntrr</a>
+          </p>
+          <p class="about">Hi, I am an aspiring Full-Stack Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="First Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" title="Second Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Third resource">MDN</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
