--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Matthew Garcia</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mattg2765/" target="_blank">mattg2765</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/gmatt20" target="_blank">gmatt20</a>
+          </p>
+          <p class="about">I am a front-end software engineer with a passion for problem-solving and creating efficient, user-centered solutions. I attend UC Riverside for my Bachelor of Arts in psychology with a minor in computer science. Connect with me on LinkedIn, I would be more than happy to meet other engineers!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=EiNiSFIPIQE" target="_blank" title="Third resource">Learn CSS Grid Video</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
