--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+        <!-- ________ *JoseMachaiela Contributor card START ________  -->
+        <div class="card">
+          <p class="name">José Machaiela</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://mz.linkedin.com/in/jos%C3%A9-machaiela-12ab03212" target="_blank">José Machaiela</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jose-bento-machaiela" target="_blank">José Machaiela</a>
+          </p>
+          <p class="about">Hello, I am a beginner in web and mobile development from Mozambique, with experience in React, Node.js, TypeScript, and JavaScript. Currently, I am pursuing a degree in Computer Systems. I love new challenges related to coding 😊.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://daily.dev" target="_blank" title="Daily Dev - News for developers">Daily Dev</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="W3Schools - Tutorials for web development">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://github.com" target="_blank" title="GitHub - Explore projects and repositories">GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *JoseMachaiela* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
