Add devi card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Devi Priya</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/lulu3202" target="_blank">lulu3202</a>
+          </p>
+          <p class="about">Product Manager turned Cloud and AI Enthusiast. Lifelong Learner. Amateur Photographer. Aspiring Novelist and World Backpacker</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://huggingface.co/" target="_blank" title="Second Resource">Hugging Face</a>
+              </li>
+              <li>
+                <a href="https://course.fast.ai/" target="_blank" title="Third resource">Practical Deep Learning for Coders</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
