--- a/index.html
+++ b/index.html
@@ -114,7 +114,35 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <div class="card">
+          <p class="name">Theodoros Moschoglou</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Etharba" target="_blank">Etharba</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Wake-cloud" target="_blank">Wake-Cloud</a>
+          </p>
+          <p class="about">Hello there i am 27 years old i live in Athens Greece
+            <br>
+            I am a Fullstack Developer and i aspire to learn more about Blockchain Developement!
+            I started Contributions to open source projects because i need some help with mine too!
+            Feel free to visit My github cheers!
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">CodeCademy</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Hackerrank</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
