--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/RealJe-emy" target="_blank">RealJe-emy</a>
           </p>
-          <p class="about">I am a passionate fullstack developer with some experience in cloud computing and an ethical hacking enthusiast.</p>
+          <p class="about">I am a passionate fullstack developer with some experience in cloud computing and an ethical hacking enthusiast.
+            You could check <a href="//jeremy-oyucho.vercel.app/">my portfolio</a> to see some cool thing's i've done.
+          </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
