Add Ahamiltonnn's card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Ahamiltonnn Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Ahamiltonnn</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/AhamiltonnnDev" target="_blank">AhamiltonnnDev</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ahamiltonnn" target="_blank">ahamiltonnn</a>
+          </p>
+          <p class="about">Hi, my name is Austin Hamilton and I'm a full stack software developer looking to start my career in the world of coding!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://publicapis.dev/" target="_blank" title="First Resource">Public APIS</a>
+              </li>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Second Resource">daily.dev</a>
+              </li>
+              <li>
+                <a href="https://colorhunt.co/" target="_blank" title="Third resource">Color Hunt</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ahamiltonn Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
