Advait Desai's card added

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Advait Desai Card START ________  -->
+        <div class="card">
+          <p class="name">Advait Desai</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/_advaitdesai/" target="_blank">_advaitdesai</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Advait2211" target="_blank">Advait2211</a>
+          </p>
+          <p class="about">Hola! This is Advait. I am starting out my BTech with a bang and will aim to be more active on github than instagram 😂</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="First Resource">YouTube, duh</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Advait Desai card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
