--- a/index.html
+++ b/index.html
@@ -151,6 +151,38 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Arun's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Arun</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/Arun_singh445" target="_blank">Arun_Singh445</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Arun-s21" target="_blank">Arun-s21</a>
+          </p>
+          <p class="about">Hey Everyone, My name's Arun and I am Computer Science undergrad from India and I'm learning MERN stack currently.
+            This is my first contribution and I want to start doing open source contributions consistently.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.javatpoint.com/" target="_blank" title="Javatpoint">Javatpoint Homepage</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeekforGeeks">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy">Udemy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Arun's Contributor card END ________  -->
+
+
+
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
