Add Trex_007 card info

--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <!--  *** Trex_007 card starts here !!! -->
+        <div class="card">
+          <p class="name">Trex_007</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/Trex_007" target="_blank">Trex_007</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Teja-450" target="_blank">Tej-450</a>
+          </p>
+          <p class="about">Hi i am Tej ,enthusiastic to learn java and full-stack ! and to contribute to open source ! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=si-KFFOW2gw&list=PLVlQHNRLflP8IGz6OXwlV_lgHgc72aXlh" target="_blank" title="First Resource">Best_tutorial_for_C</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=SqcXvc3ZmRU" target="_blank" title="Second Resource">Simple_System_design_tutorial</a>
+              </li>
+              <li>
+                <a href="https://github.com/sachin-source/top-github-repositories-which-everyone-should-look" target="_blank" title="Third resource">git_dev_resources!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ---------------  *Trex_007 copy ends here !!-->
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
