--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ CodedByElvis card START ________  -->
+         <div class="card">
+          <p class="name">Elvis Hernandez</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/CodedElvis?s=09" target="_blank">CodedByElvis</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/codedbyelvis" target="_blank">CodedByElvis</a>
+          </p>
+          <p class="about">Hi, I am a Full-stack Developer who is passionate about
+            solving problems and helping people. I love that code makes anything achievable,
+            and that our community is so kind and helpful.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=rg7Fvvl3taU" target="_blank" title="An incredible CSS Grid tutorial by Kevin Powell">CSS Grid Tutorial</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/learn" target="_blank" title="Amazing free courses(even more resources on their YT and Twitter)">FreeCodeCamp Courses</a>
+              </li>
+              <li>
+                <a href="https://react-spectrum.adobe.com/react-aria/index.html" target="_blank" title="Adobe Open-source library to make accesible web apps">React Aria Accesibility Library</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ CodedByElvis card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
